--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^7.2.6",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
