--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,6 +40,8 @@ http {
     ssl_certificate_key /etc/ssl/private/self-signed.key;
   {{/PHILA_TEST}}
     include server.d/*.conf;
+
+    add_header X-Frame-Options "DENY";
   }
 
   server {
