--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,8 @@ http {
     ssl_certificate_key /etc/ssl/private/self-signed.key;
   {{/PHILA_TEST}}
     include server.d/*.conf;
-
+    
+    # Block site from being framed with X-Frame-Options and CSP
     add_header X-Frame-Options "DENY";
   }
 
