--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -31,7 +31,7 @@
   "homepage": "https://github.com/CityOfPhiladelphia/phila.gov-theme",
   "devDependencies": {
     "autoprefixer": "^7.2.6",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
@@ -40,6 +40,7 @@
     "browserify": "^14.5.0",
     "browserify-shim": "^3.8.14",
     "envify": "^4.1.0",
+    "hoek": "^5.0.3",
     "node-sass": "^4.9.0",
     "postcss": "^6.0.21",
     "vueify": "^9.4.0"
