Use postcss instead of postcss-cli The postbuild task was failing on a fresh install saying `postcss` was not available. The `postcss` readme points to `postcss-cli` for CLI usage. Not sure how this has worked all this time but my only guess is that `postcss-cli` is installed globally on the AMI? :shrug:

--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -42,7 +42,7 @@
     "envify": "^4.1.0",
     "hoek": "^5.0.3",
     "node-sass": "^4.9.2",
-    "postcss": "^6.0.23",
+    "postcss-cli": "^5.0.1",
     "vueify": "^9.4.0"
   },
   "dependencies": {
