--- a/nginx/cors.conf
+++ b/nginx/cors.conf
@@ -5,7 +5,7 @@
 set $cors '';
 
 #TODO: Remove phila.website
-if ($request_uri ~ '^https?://(localhost|(.*)\.phila\.gov|(.*)\.phila\.website)') {
+if ($request_uri ~ '^https?:\/\/(localhost)|(.*)(\.phila\.gov)|(.*)(\.phila\.website)') {
   set $cors 'true';
 }
 
