--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -46,9 +46,11 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-polyfill": "^6.26.0",
+    "fuse.js": "^3.3.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "list.js": "^1.5.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mustache": "^2.3.2",
     "phila-standards": "1.0.2",
@@ -57,6 +59,7 @@
     "vue-js-modal": "^1.3.26",
     "vue-paginate": "^3.6.0",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0",
     "vue-select": "^2.5.1",
     "vue-template-compiler": "^2.5.17",
     "vuejs-datepicker": "^0.9.29"
