--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -7,9 +7,8 @@
     "dev:css": "node-sass --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --source-map true css/scss/base.scss css/styles.css",
     "build:css": "node-sass --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --output-style compressed --source-map true css/scss/base.scss css/styles.min.css",
     "dev:js": "browserify js/dev/main.js -o js/phila-scripts.js",
-    "dev:vuejs": "browserify -t vueify -e js/vuesrc/main.js -o js/app.js",
     "build:js": "browserify -e js/dev/main.js | uglifyjs -c -m > js/phila-scripts.min.js",
-    "vuejs": "NODE_ENV=production browserify -g envify -t vueify -e js/vuesrc/main.js -o js/app.js",
+    "vuejs": "webpack --config webpack.config.js",
     "dev:build": "npm run dev:css && npm run dev:js && npm run dev:vuejs",
     "build": "npm run build:css && npm run build:js && npm run vuejs",
     "postbuild": "postcss --use autoprefixer -b 'last 2 versions' < css/styles.min.css -o css/styles.min.css"
@@ -37,31 +36,35 @@
     "babelify": "^7.3.0",
     "browserify": "^14.5.0",
     "browserify-shim": "^3.8.14",
+    "css-loader": "^3.2.0",
     "envify": "^4.1.0",
     "hoek": "^5.0.4",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "postcss-cli": "^5.0.1",
-    "vueify": "^9.4.0"
+    "style-loader": "^1.0.0",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "fuse.js": "^3.4.5",
     "jquery": "^3.4.1",
-    "js-cookie": "^2.2.0",
+    "js-cookie": "^2.2.1",
     "list.js": "^1.5.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mustache": "^2.3.2",
     "phila-standards": "^1.1.1",
-    "uglify-js": "^3.6.0",
+    "uglify-js": "^3.6.4",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-paginate": "^3.6.0",
-    "vue-router": "^3.0.6",
-    "vue-scrollto": "^2.15.0",
+    "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.17.1",
     "vue-select": "^2.6.4",
-    "vue-template-compiler": "^2.6.10",
     "vuejs-datepicker": "^0.9.29"
   },
   "browser": {
