--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -8,7 +8,7 @@
     "build:css": "node-sass --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --output-style compressed --source-map true css/scss/base.scss css/styles.min.css",
     "dev:js": "browserify js/dev/main.js -o js/phila-scripts.js",
     "build:js": "browserify -e js/dev/main.js | uglifyjs -c -m > js/phila-scripts.min.js",
-    "vuejs": "webpack --config webpack.config.js",
+    "vuejs": "webpack --mode production  --config webpack.config.js",
     "dev:build": "npm run dev:css && npm run dev:js && npm run dev:vuejs",
     "build": "npm run build:css && npm run build:js && npm run vuejs",
     "postbuild": "postcss --use autoprefixer -b 'last 2 versions' < css/styles.min.css -o css/styles.min.css"
