--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -48,6 +48,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "^5.13.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "fuse.js": "^3.4.5",
