--- a/nginx/cors.conf
+++ b/nginx/cors.conf
@@ -6,55 +6,21 @@ set $cors '';
 
 #TODO: Remove phila.website
 if ($request_uri ~ '^https?:\/\/(localhost)|(.*)(\.phila\.gov)|(.*)(\.phila\.website)') {
-  set $cors 'true';
+   set $cors 'true';
 }
 
 if ($cors = 'true') {
-#   add_header 'Access-Control-Allow-Origin' "$request_uri";
-#   add_header 'Vary' "Origin";
-#   add_header 'Access-Control-Allow-Credentials' 'true';
-#   add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-#   add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With';
-     if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        #
-        # Custom headers and headers various browsers *should* be OK with but aren't
-        #
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-        #
-        # Tell client that this pre-flight info is valid for 20 days
-        #
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain; charset=utf-8';
-        add_header 'Content-Length' 0;
-        return 204;
-     }
-     if ($request_method = 'POST') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-     }
-     if ($request_method = 'GET') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-     }
-  
-  # if ($request_method = 'POST') {
-  #   add_header 'Access-Control-Allow-Origin' '*';
-  #   add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-  #   add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-  #   add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-  # }
+   add_header 'Access-Control-Allow-Origin' "$request_uri";
+   add_header 'Vary' "Origin";
+   add_header 'Access-Control-Allow-Credentials' 'true';
+   add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+   add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With';
 }
 
 if ($request_method = 'OPTIONS') {
-  # Tell client that this pre-flight info is valid for 20 days
-  add_header 'Access-Control-Max-Age' 1728000;
-  add_header 'Content-Type' 'text/plain charset=UTF-8';
-  add_header 'Content-Length' 0;
-  return 204;
+   # Tell client that this pre-flight info is valid for 20 days
+   add_header 'Access-Control-Max-Age' 1728000;
+   add_header 'Content-Type' 'text/plain charset=UTF-8';
+   add_header 'Content-Length' 0;
+   return 204;
 }
