--- a/wp/wp-content/themes/phila.gov-theme/package.json
+++ b/wp/wp-content/themes/phila.gov-theme/package.json
@@ -4,8 +4,8 @@
   "description": "A custom wordpress theme for phila.gov",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:css": "node-sass -w --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --source-map true css/scss/base.scss css/styles.css",
-    "build:css": "node-sass -w --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --output-style compressed --source-map true css/scss/base.scss css/styles.min.css",
+    "dev:css": "node-sass --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --source-map true css/scss/base.scss css/styles.css",
+    "build:css": "node-sass --include-path node_modules/phila-standards/src/_vendor/foundation-sites/scss --include-path node_modules/phila-standards/src/sass --output-style compressed --source-map true css/scss/base.scss css/styles.min.css",
     "dev:js": "browserify js/dev/main.js -o js/phila-scripts.js",
     "build:js": "browserify -e js/dev/main.js | uglifyjs -c -m > js/phila-scripts.min.js",
     "vuejs": "webpack --mode production  --config webpack.config.js",
@@ -58,7 +58,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mustache": "^2.3.2",
-    "phila-standards": "^1.1.4",
+    "phila-standards": "^1.1.5",
     "uglify-js": "^3.6.4",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
