--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,8 @@ branch_config:
     wip\/.*: ~
 
     staging:
-        deploymentGroupName: 	staging-phila-gov-codedeploy-deploymentgroup
+        applicationName: staging-phila-gov-codedeploy
+        deploymentGroupName: staging-phila-gov-codedeploy-deploymentgroup
         deploymentGroupConfig:
             serviceRoleArn: arn:aws:iam::676612114792:role/beta.phila.gov_CodeDeploy
         deploymentConfig:
