--- a/appspec.yml
+++ b/appspec.yml
@@ -11,7 +11,7 @@ branch_config:
 
     staging:
         deploymentGroupName: staging-phila-gov-codedeploy-deploymentgroup
-        application: staging-phila-gov-codedeploy
+        applicationName: staging-phila-gov-codedeploy
         deploymentGroupConfig:
             serviceRoleArn: arn:aws:iam::676612114792:role/beta.phila.gov_CodeDeploy
         deploymentConfig:
