--- a/appspec.yml
+++ b/appspec.yml
@@ -11,9 +11,10 @@ branch_config:
 
     staging:
         deploymentGroupName: staging-phila-gov-codedeploy-deploymentgroup
-        applicationName: staging-phila-gov-codedeploy
+        # applicationName: staging-phila-gov-codedeploy
         deploymentGroupConfig:
             serviceRoleArn: arn:aws:iam::676612114792:role/beta.phila.gov_CodeDeploy
+            applicationName: staging-phila-gov-codedeploy
         deploymentConfig:
             autoRollbackConfiguration:
                 enabled: true
