--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,7 @@ branch_config:
         # applicationName: staging-phila-gov-codedeploy
         deploymentGroupConfig:
             serviceRoleArn: arn:aws:iam::676612114792:role/beta.phila.gov_CodeDeploy
-            application: staging-phila-gov-codedeploy
+            applicationName: staging-phila-gov-codedeploy
         deploymentConfig:
             autoRollbackConfiguration:
                 enabled: true
