--- a/appspec.yml
+++ b/appspec.yml
@@ -15,4 +15,4 @@ branch_config:
             serviceRoleArn: arn:aws:iam::676612114792:role/beta.phila.gov_CodeDeploy
         deploymentConfig:
             autoRollbackConfiguration:
-                enabled: true
+                enabled: false
