--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@
 
 # This section controls the action:
 
-
+version: 0.0
 
 branch_config:
     wip\/.*: ~
@@ -15,4 +15,4 @@ branch_config:
             serviceRoleArn: arn:aws:iam::676612114792:role/beta.phila.gov_CodeDeploy
         deploymentConfig:
             autoRollbackConfiguration:
-                enabled: false
+                enabled: true
