--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,6 +15,6 @@ jobs:
           aws-region: us-east-1
       - uses: actions/checkout@v2
       - id: staging-deploy
-        uses: webfactory/create-aws-codedeploy-deployment@v0.1.0
+        uses: webfactory/create-aws-codedeploy-deployment@0.2.2
         with: 
           application: staging-phila-gov-codedeploy
