--- a/appspec.yml
+++ b/appspec.yml
@@ -6,7 +6,28 @@
 
 version: 0.0
 os: linux
-
+files:
+  - source: /wp
+    destination: /home/ubuntu/app/wp
+  - source: /nginx
+    destination: /home/ubuntu/app/nginx
+  - source: wp-cli.yml
+    destination: /home/ubuntu/app
+permissions:
+  - object: /home/ubuntu/app/wp
+    owner: ubuntu
+    group: ubuntu
+  - object: /home/ubuntu/app/wp-cli.yml
+    owner: ubuntu
+    group: ubuntu
+hooks:
+  BeforeInstall:
+    - location: scripts/predeploy.sh
+      runas: ubuntu
+  AfterInstall:
+    - location: scripts/deploy.sh
+      runas: ubuntu
+      
 branch_config:
     wip\/.*: ~
 
